--- a/tiger-hsu/base.css
+++ b/tiger-hsu/base.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Abel|Oswald:700|Yellowtail|Patrick+Hand');
 
 * {
   font-family: times;
@@ -6,4 +5,12 @@
 
 body {
   background: #fff;
+}
+
+main p {
+  color: #333;
+  font-size: 1.2em;
+  line-height: 1.3em;
+  text-indent: 30px;
+  margin: 20px 0px;
 }
