--- a/tiger-hsu/styles/layout.css
+++ b/tiger-hsu/styles/layout.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Abel|Oswald:700|Yellowtail|Patrick+Hand');
-
-
 nav, article, aside, footer section {
   margin: 0 auto;
   width: 900px;
@@ -17,6 +14,22 @@ nav ul {
 nav li {
   float: left;
   padding-right: 2px;
+}
+
+hr {
+  clear: both;
+  border: 0;
+  height: 13px;
+  background-image: url('img/hr-img.gif');
+}
+
+h2 {
+  margin-top: 50px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 2.5em;
+}
+input {
+  font-family: 'Patrick Hand', cursive;
 }
 
 .recipe {
@@ -57,6 +70,7 @@ aside p {
   width: 65%;
   margin: 0;
   text-indent: 0;
+
 }
 
 aside button {
